Second iteration on .java generation
Tests broke on this one